# RT2_Assignment1

./: .gitignore  README.md  command_panel.sh  launcher.sh  odom_clean.sh  run_assignment.sh
src/bme_gazebo_sensors/worlds/: my.sdf
src/rt2_nav_bringup/: CMakeLists.txt  package.xml
src/rt2_nav_bringup/config/: nav_params.yaml
src/rt2_nav_bringup/launch/: nav_components.launch.py
src/rt2_nav_client/: CMakeLists.txt  package.xml
src/rt2_nav_client/include/rt2_nav_client/: nav_ui.hpp
src/rt2_nav_client/src/: nav_ui.cpp  nav_ui_main.cpp
src/rt2_nav_interfaces/: CMakeLists.txt  package.xml
src/rt2_nav_interfaces/action/: NavigateToPose.action
src/rt2_nav_server/: CMakeLists.txt  package.xml
src/rt2_nav_server/include/rt2_nav_server/: nav_server.hpp
src/rt2_nav_server/src/: nav_server.cpp  nav_server_main.cpp
