<?xml version="1.0"?>
<package format="3">
  <name>rt2_nav_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS2 action interface for 2D robot navigation goals, feedback, and results.</description>
  <maintainer email="7782369@studenti.unige.it">Edoardo Ruggeri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>